--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "format": "prettier --write \"**/*.{js,ts,tsx,css,json,md}\"",
+    "format:check": "prettier --check \"**/*.{js,ts,tsx,css,json,md}\"",
     "build": "vite build",
     "build:server": "tsc -p tsconfig.server.json",
     "start": "node server/index.js",
@@ -28,6 +30,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
